@@ -618,27 +618,24 @@ argument_list|<
 name|SolrCore
 argument_list|>
 name|coreList
-decl_stmt|;
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|transientNames
-decl_stmt|;
-name|List
+init|=
+operator|new
+name|ArrayList
 argument_list|<
 name|SolrCore
 argument_list|>
-name|pendingToClose
+argument_list|()
 decl_stmt|;
 comment|// It might be possible for one of the cores to move from one list to another while we're closing them. So
 comment|// loop through the lists until they're all empty. In particular, the core could have moved from the transient
 comment|// list to the pendingCloses list.
-while|while
-condition|(
-literal|true
-condition|)
+do|do
 block|{
+name|coreList
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
 synchronized|synchronized
 init|(
 name|modifyLock
@@ -646,12 +643,8 @@ init|)
 block|{
 comment|// make a copy of the cores then clear the map so the core isn't handed out to a request again
 name|coreList
-operator|=
-operator|new
-name|ArrayList
-argument_list|<
-name|SolrCore
-argument_list|>
+operator|.
+name|addAll
 argument_list|(
 name|cores
 operator|.
@@ -664,56 +657,34 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
-name|transientNames
-operator|=
-operator|new
-name|ArrayList
-argument_list|<
-name|String
-argument_list|>
+name|coreList
+operator|.
+name|addAll
 argument_list|(
 name|transientCores
 operator|.
-name|keySet
+name|values
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|pendingToClose
-operator|=
-operator|new
-name|ArrayList
-argument_list|<
-name|SolrCore
-argument_list|>
+name|transientCores
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|coreList
+operator|.
+name|addAll
 argument_list|(
 name|pendingCloses
 argument_list|)
 expr_stmt|;
+name|pendingCloses
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
 block|}
-if|if
-condition|(
-name|coreList
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|0
-operator|&&
-name|transientNames
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|0
-operator|&&
-name|pendingToClose
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|0
-condition|)
-break|break;
 for|for
 control|(
 name|SolrCore
@@ -751,148 +722,17 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-for|for
-control|(
-name|String
-name|coreName
-range|:
-name|transientNames
-control|)
-block|{
-name|SolrCore
-name|core
-init|=
-name|transientCores
-operator|.
-name|get
-argument_list|(
-name|coreName
-argument_list|)
-decl_stmt|;
-if|if
+block|}
+do|while
 condition|(
-name|core
-operator|==
-literal|null
+name|coreList
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
 condition|)
-block|{
-name|CoreContainer
-operator|.
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"Core "
-operator|+
-name|coreName
-operator|+
-literal|" moved from transient core container list before closing."
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-try|try
-block|{
-name|core
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Throwable
-name|t
-parameter_list|)
-block|{
-name|SolrException
-operator|.
-name|log
-argument_list|(
-name|CoreContainer
-operator|.
-name|log
-argument_list|,
-literal|"Error shutting down core"
-argument_list|,
-name|t
-argument_list|)
-expr_stmt|;
-block|}
-finally|finally
-block|{
-synchronized|synchronized
-init|(
-name|modifyLock
-init|)
-block|{
-name|transientCores
-operator|.
-name|remove
-argument_list|(
-name|coreName
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-block|}
-comment|// We might have some cores that we were _thinking_ about shutting down, so take care of those too.
-for|for
-control|(
-name|SolrCore
-name|core
-range|:
-name|pendingToClose
-control|)
-block|{
-try|try
-block|{
-name|core
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Throwable
-name|t
-parameter_list|)
-block|{
-name|SolrException
-operator|.
-name|log
-argument_list|(
-name|CoreContainer
-operator|.
-name|log
-argument_list|,
-literal|"Error shutting down core"
-argument_list|,
-name|t
-argument_list|)
-expr_stmt|;
-block|}
-finally|finally
-block|{
-synchronized|synchronized
-init|(
-name|modifyLock
-init|)
-block|{
-name|pendingCloses
-operator|.
-name|remove
-argument_list|(
-name|core
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-block|}
+do|;
 block|}
 comment|//WARNING! This should be the _only_ place you put anything into the list of transient cores!
 DECL|method|putTransientCore
